src/objects/MM85RELATIONS__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Relations</description>
    <fields>
        <fullName>Category__c</fullName>
        <formula>CASE( REL_CAT__c ,
&quot;05&quot;,&quot;Corporations&quot;,
&quot;10&quot;,&quot;Unions&quot;,
&quot;15&quot;,&quot;Governments&quot;,
&quot;20&quot;,&quot;Endowments&quot;,
&quot;25&quot;,&quot;Private Foundations&quot;,
&quot;28&quot;,&quot;All Other Tax-Exempt Organizations&quot;,
&quot;30&quot;,&quot;Health Service Organization – for profit&quot;,
&quot;35&quot;,&quot;Reserve Banks&quot;,
&quot;38&quot;,&quot;Health Service Organization – non profit&quot;,
&quot;66&quot;,&quot;Sovereign Wealth Funds&quot;,
&quot;50&quot;,&quot;Institutional Money Managers&quot;,
&quot;70&quot;,&quot;Institutional Money Managers (Real Estate)&quot;,
&quot;80&quot;,&quot;Registered Investment Advisors&quot;,
&quot;85&quot;,&quot;Investment Management Consultants – Main office&quot;,
&quot;86&quot;,&quot;Investment Management Consultants – Regional office&quot;,
&quot;87&quot;,&quot;Investment Management Consultants – Branch office&quot;,
&quot;90&quot;,&quot;Family Office&quot;,
&quot;95&quot;,&quot;Family Office Service Provider&quot;,REL_CAT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Profile_Link__c</fullName>
        <label>Firm Profile Link</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Consultant Relations</relationshipLabel>
        <relationshipName>MMD_Consultant_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_CAT__c</fullName>
        <label>Category Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_CONAME__c</fullName>
        <label>Related Firm Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_PID__c</fullName>
        <label>Related Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REL_TYPE__c</fullName>
        <label>Relation Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Firm_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Firm Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MMD Consultant Relations</relationshipLabel>
        <relationshipName>MMD_Consultant_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MMD Consultant Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Consultant Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>